<resources>
    <string name="app_name">Calendar100</string>
    <string name="submit">Submit</string>
    <string name="enter_the_year">Enter the year</string>
    <string name="example_2030">example: 2030</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="enter_the_month">Enter the month</string>
    <string name="enter_the_date">Enter the date</string>
    <string name="example_24">example: 24</string>
    <string name="there_will_be">There will be</string>
</resources>