<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MonthActivity">

    <TextView
        android:id="@+id/monthInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/enter_the_month"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/january"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:onClick="submitMonth1"
        tools:ignore="OnClick,UsingOnClickInXml"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthInput"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/february"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:onClick="submitMonth2"
        tools:ignore="OnClick,UsingOnClickInXml"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/march"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:onClick="submitMonth3"
        tools:ignore="OnClick,UsingOnClickInXml"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/april"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:onClick="submitMonth4"
        tools:ignore="OnClick,UsingOnClickInXml"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/may"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:onClick="submitMonth5"
        tools:ignore="OnClick,UsingOnClickInXml"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/june"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:onClick="submitMonth6"
        tools:ignore="OnClick,UsingOnClickInXml"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/july"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:onClick="submitMonth7"
        tools:ignore="OnClick,UsingOnClickInXml"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/monthInput" />

    <Button
        android:id="@+id/button8"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/august"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:onClick="submitMonth8"
        tools:ignore="OnClick,UsingOnClickInXml"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:text="@string/september"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:onClick="submitMonth9"
        tools:ignore="OnClick,UsingOnClickInXml"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button10"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/october"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:onClick="submitMonth10"
        tools:ignore="OnClick,UsingOnClickInXml"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/button9" />


    <Button
        android:id="@+id/button11"
        android:layout_width="150dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:text="@string/november"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:onClick="submitMonth11"
        tools:ignore="OnClick,UsingOnClickInXml"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button12"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:text="@string/december"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:onClick="submitMonth12"
        tools:ignore="OnClick,UsingOnClickInXml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

</androidx.constraintlayout.widget.ConstraintLayout>